@@ -11,6 +11,7 @@
  *  areas relevant to making older projects compatible with the API changes of each new release.
  *
  * \section Sec_MigrationXXXXXX Migrating from 090810 to XXXXXX
+ *  <b>No Migration information for this release.</b>
  *
  * \section Sec_Migration090924 Migrating from 090810 to 090924
  *
